force-app/main/default/objects/CWS_Promotion__c/CWS_Promotion__c.object-meta.xml
<CustomObject>
    <description>This object contains the promo codes which are applicable depending on quote and quote lines</description>
    <label>Promotion</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>