force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Active__c.field-meta.xml
<CustomField>
    <fullName>CWS_Active__c</fullName>
    <formula>If(Today()&lt; CWS_Start_Date__c,&apos;Inactive&apos;,If(CWS_End_Date__c &lt; TODAY(), &apos;Expired&apos;,&apos;Active&apos;))</formula>
    <label>Active</label>
    <type>Text</type>
</CustomField>