force-app/main/default/objects/CWS_Promotion__c/fields/CWS_ACV__c.field-meta.xml
<CustomField>
    <fullName>CWS_ACV__c</fullName>
    <description>Minimum ACV required to apply this promo</description>
    <inlineHelpText>Minimum ACV required to apply this promo</inlineHelpText>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>