force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Approver__c.field-meta.xml
<CustomField>
    <fullName>CWS_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specified approver to approve the use of this promo entry</description>
    <inlineHelpText>Specified approver to approve the use of this promo entry</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>