force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>CWS_Billing_Schedule__c</fullName>
    <description>Promo can only be applied on specified billing schedule if populated</description>
    <inlineHelpText>Promo can only be applied on specified billing schedule if populated</inlineHelpText>
    <label>Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Tri-Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>