force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Category__c.field-meta.xml
<CustomField>
    <fullName>CWS_Category__c</fullName>
    <description>Product categories that are applicable for the use of this promo</description>
    <inlineHelpText>Product categories that are applicable for the use of this promo</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Category</valueSetName>
    </valueSet>
</CustomField>