force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Clause__c.field-meta.xml
<CustomField>
    <fullName>CWS_Clause__c</fullName>
    <description>The clause entered here will be printed on the order form</description>
    <inlineHelpText>The clause entered here will be printed on the order form</inlineHelpText>
    <label>Clause</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>