force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Currency__c.field-meta.xml
<CustomField>
    <fullName>CWS_Currency__c</fullName>
    <label>Currency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CW_Currency_ISO_Code</valueSetName>
    </valueSet>
</CustomField>