force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Description__c.field-meta.xml
<CustomField>
    <fullName>CWS_Description__c</fullName>
    <description>Describes the functionality of the particular promo entry</description>
    <inlineHelpText>Describes the functionality of the particular promo entry</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>