force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Discount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Discount__c</fullName>
    <description>The discount percentage that will automatically be applied on quote line once promo code is entered</description>
    <inlineHelpText>The discount percentage that will automatically be applied on quote line once promo code is entered</inlineHelpText>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>