force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>CWS_Discount_Amount__c</fullName>
    <description>To be manually discounted in &apos;Promo discount&apos; field on cart</description>
    <inlineHelpText>To be manually discounted in &apos;Promo discount&apos; field on cart</inlineHelpText>
    <label>Discount Amount(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>