force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Discount_Cost__c.field-meta.xml
<CustomField>
    <fullName>CWS_Discount_Cost__c</fullName>
    <description>The discount percentage on cost that will automatically be applied on quote line once promo code is entered</description>
    <label>Discount Cost%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>