force-app/main/default/objects/CWS_Promotion__c/fields/CWS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_End_Date__c</fullName>
    <description>End date of this promo entry</description>
    <inlineHelpText>End date of this promo entry</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>