force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CWS_Max_Quantity__c</fullName>
    <description>Maximum selling requirement is needed for this particular SKU to use this promo</description>
    <inlineHelpText>Maximum selling requirement is needed for this particular SKU to use this promo</inlineHelpText>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>