force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Max_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_Max_SKU__c</fullName>
    <description>Maximum selling requirement is needed for this particular SKU to use this promo</description>
    <inlineHelpText>Maximum selling requirement is needed for this particular SKU to use this promo</inlineHelpText>
    <label>Max SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>