force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Number_of_billing_cycles__c.field-meta.xml
<CustomField>
    <fullName>CWS_Number_of_billing_cycles__c</fullName>
    <description>User should populate the number of billing cycles before return to list price as suggested here. Otherwise, it will be rejected by the approver.</description>
    <inlineHelpText>User should populate the number of billing cycles before return to list price as suggested here. Otherwise, it will be rejected by the approver.</inlineHelpText>
    <label>Number of billing cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>