force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Payment_Schedule_Driver__c.field-meta.xml
<CustomField>
    <fullName>CWS_Payment_Schedule_Driver__c</fullName>
    <description>Promo can only be applied on specified payment schedule driver if populated</description>
    <inlineHelpText>Promo can only be applied on specified payment schedule driver if populated</inlineHelpText>
    <label>Payment Schedule Driver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Payment_Schedule_Driver</valueSetName>
    </valueSet>
</CustomField>