force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Period_for_Ramp_Spread_Deferment__c.field-meta.xml
<CustomField>
    <fullName>CWS_Period_for_Ramp_Spread_Deferment__c</fullName>
    <description>User should populate ramp/spread/deferment period as suggested here. Otherwise, it will be rejected by the approver.</description>
    <inlineHelpText>User should populate ramp/spread/deferment period as suggested here. Otherwise, it will be rejected by the approver.</inlineHelpText>
    <label>Period for Ramp/Spread/Deferment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>