force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>CWS_Product_SKU__c</fullName>
    <description>If populated, only this product on the cart will get promo applied, and will only be sent for Contract Admin/Approver approvals</description>
    <inlineHelpText>If populated, only this product on the cart will get promo applied, and will only be sent for Contract Admin/Approver approvals</inlineHelpText>
    <label>Product SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>