force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>CWS_Promo_Code__c</fullName>
    <description>This field contains the promotion code which will be applied for products</description>
    <inlineHelpText>This field contains the promotion code which will be applied for products</inlineHelpText>
    <label>Promo Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>