force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Quoteline_Term__c.field-meta.xml
<CustomField>
    <fullName>CWS_Quoteline_Term__c</fullName>
    <description>Promo can only be applied on specified quote line terms if populated</description>
    <inlineHelpText>Promo can only be applied on specified quote line terms if populated</inlineHelpText>
    <label>Quoteline Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>