force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Route_to_Market__c.field-meta.xml
<CustomField>
    <fullName>CWS_Route_to_Market__c</fullName>
    <description>Promo can only be applied on specified RTM if populated</description>
    <inlineHelpText>Promo can only be applied on specified RTM if populated</inlineHelpText>
    <label>Route to Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>IIT</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>