force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Standard__c.field-meta.xml
<CustomField>
    <fullName>CWS_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the standard is unchecked the approval will be sent to contract admin and if the approver field is populated as well then it will be sent to the corresponding approver too. If the standard is checked it will not go to any approval.</description>
    <inlineHelpText>If the standard is unchecked the approval will be sent to contract admin and if the approver field is populated as well then it will be sent to the corresponding approver too. If the standard is checked it will not go to any approval.</inlineHelpText>
    <label>Standard</label>
    <type>Checkbox</type>
</CustomField>