force-app/main/default/objects/CWS_Promotion__c/fields/CWS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Start_Date__c</fullName>
    <description>start date from which the Promotion code will be applicable</description>
    <inlineHelpText>start date from which the Promotion code will be applicable</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>