force-app/main/default/objects/CWS_Promotion__c/validationRules/CWS_Date_range.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_Date_range</fullName>
    <active>true</active>
    <errorConditionFormula>If(CONTAINS($Setup.CWS_Bypass_Settings__c.CWS_Bypass_Objects__c,&quot;CWS_Promotion__c&quot;)&amp;&amp; ($Setup.CWS_Bypass_Settings__c.CWS_Validation_Rules_Disabled__c==true),false,CWS_Start_Date__c&gt;CWS_End_Date__c)</errorConditionFormula>
    <errorMessage>End date cannot be less than start date</errorMessage>
</ValidationRule>