force-app/main/default/objects/CWS_Promotion__c/listViews/CWS_Active_Promos.listView-meta.xml
<ListView>
    <fullName>CWS_Active_Promos</fullName>
    <columns>NAME</columns>
    <columns>CWS_Active__c</columns>
    <columns>CWS_Promo_Code__c</columns>
    <columns>CWS_Start_Date__c</columns>
    <columns>CWS_End_Date__c</columns>
    <columns>CWS_Standard__c</columns>
    <columns>CWS_Description__c</columns>
    <columns>CWS_Discount__c</columns>
    <columns>CWS_Route_to_Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Active__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Promos</label>
</ListView>