force-app/main/default/objects/CWS_Promotion__c/listViews/CWS_All_Promos.listView-meta.xml
<ListView>
    <fullName>CWS_All_Promos</fullName>
    <columns>NAME</columns>
    <columns>CWS_Active__c</columns>
    <columns>CWS_Promo_Code__c</columns>
    <columns>CWS_Description__c</columns>
    <columns>CWS_Start_Date__c</columns>
    <columns>CWS_End_Date__c</columns>
    <columns>CWS_Standard__c</columns>
    <columns>CWS_Discount__c</columns>
    <columns>CWS_Clause__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Promos</label>
</ListView>