force-app/main/default/objects/CWS_Promotion__c/listViews/CWS_Non_Standard_Promos.listView-meta.xml
<ListView>
    <fullName>CWS_Non_Standard_Promos</fullName>
    <columns>NAME</columns>
    <columns>CWS_Active__c</columns>
    <columns>CWS_Promo_Code__c</columns>
    <columns>CWS_Start_Date__c</columns>
    <columns>CWS_End_Date__c</columns>
    <columns>CWS_Description__c</columns>
    <columns>CWS_Discount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Standard__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non Standard Promos</label>
    <language>en_US</language>
</ListView>